Fully switched to Guice - needs more refactoring and tests